connect to postgres db inside container
connect to postgres db inside container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=monthlybudget
+spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
+spring.datasource.username= postgres
+spring.datasource.password=postgresmbpass
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
